test/good/nullables/nullable03.px

Bool? x
x = null
print x
x = true
print x
