test/bad/basic/decl04.px

x: Int
if true do
    x: Bool = true
